--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resort",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://nikicivan.github.io/resort-rooms",
+  "homepage":"https://nikicivan.github.io/resort-rooms",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
